--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
     "manifest_version": 2,
     "name": "YTLyrics",
-    "version": "0.3",
+    "version": "0.4",
   
     "description": "Adds lyrics to the youtube description.",
   
@@ -15,8 +15,8 @@
 
     "permissions": [
       "*://*.youtube.com/*",
-      "*://api.genius.com/*",
-      "*://genius.com/*"
+      "*://genius.com/*",
+      "*://*.duckduckgo.com/*"
     ]
   
   }
