--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
 
     "manifest_version": 2,
     "name": "YTLyrics",
-    "version": "0.63",
+    "version": "0.64",
   
     "description": "Adds lyrics to the youtube description.",
   
     "content_scripts": [
       {
-        "matches": ["*://*.youtube.com/*"],
+        "matches": ["*://*.youtube.com/watch?v=*"],
         "js": ["ytlyrics.js"]
       }
     ],
