allow lyrics.com

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
 
     "permissions": [
       "*://genius.com/*",
-      "*://*.duckduckgo.com/*"
+      "*://*.duckduckgo.com/*",
+      "*://*.lyrics.com/*"
     ]
   
 }  
